# ml_template

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.claude/: settings.json
.virtual_documents/: Untitled.ipynb
docs/birdclef2026/: birdclef2026_guide.md
src/utils/: mlflow_utils.py
