[project]
name = "kaggle-project"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "mlflow>=2.13.0",
    "lightgbm>=4.3.0",
    "xgboost>=2.0.0",
    "catboost>=1.2.0",
    "scikit-learn>=1.4.0",
    "polars>=0.20.0",
    "optuna>=3.6.0",
    "hydra-core>=1.3.0",
]


[dependency-groups]
dev = [
    "jupyter>=1.0.0",
    "ipykernel>=6.29.0",
    "ruff>=0.4.0",
]